--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>CALCULADORA DE PAPILEO</title>
   <base href="/CALCULADORA/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="leo.jfif">
+  <link rel="icon" type="image/x-icon" href="ileo.jpg">
 
 ç
   
